Replace drawOrder ArrayList with LinkedHashSet for O(1) operations (#433)
Bulk paste/delete was O(n²) due to ArrayList contains/remove. LinkedHashSet
preserves insertion order with O(1) contains, add, and remove.